tests/fixtures/errors/wrong_target.h
/**
 * @nb
 */
class Foo {
public:
    /**
     * @nb
     * @nb_inherit Bar
     */
    void bar();
};
